--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/logo-t.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tio | Developer</title>
+    <title>Tio Dwi Satrio | Developer</title>
   </head>
   <body>
     <div id="root"></div>
